# Triangulation

./: .gitignore  .gitpod.yml  README.learning.md  README.md  execute.bat  execute.sh  execute_cert.bat  execute_cert.sh  execute_quic.bat  execute_quic.sh  setup_db.bat
cert/: cert_param.json  localhost.crt  localhost.hex  localhost.key
cert_server/: Cargo.toml
cert_server/src/: main.rs
client-app/: README.md  angular.json  package.json  tsconfig.app.json
client-app/src/: index.html  styles.scss
data/: versioning.json.zl
data/project/: P_018e35fb-838f-7d96-8f40-8c46b61e378a.json.zl  P_018e3bf3-2e11-7488-be08-f7fdd369256e.json.zl  P_018e40f6-b4c2-7e4b-bc3d-01c6d1d4233a.json.zl  P_018e40fc-0ad2-7b8f-beef-360e1dce6c85.json.zl  P_018e5065-393a-7cc9-beca-9945f961068f.json.zl  (+7 more)
frontend/: README.md  angular.json  package-lock.json  package.json
quic_backend/: Cargo.toml
quic_backend/migrations/2024-02-16-031652_create_dbs/: down.sql  up.sql
quic_backend/src/: main.rs  messages.rs  routes.rs  schema.rs  types.rs
quic_backend/src/archived/: server_config.rs
quic_backend/src/controller/: cycle_controller.rs  home_controller.rs  misc_controller.rs  mod.rs  pipeline_controller.rs  project_controller.rs  response_controller.rs  sample_controller.rs  template_controller.rs
quic_backend/src/data/: clone.rs  compressor.rs  file.rs  migration.rs  mod.rs  versioning.rs
quic_backend/src/dto/: checklist_dto.rs  filelist_dto.rs  kelly_dto.rs  misc_dto.rs  mod.rs  obj_dto.rs  pipeline_dto.rs  project_dto.rs  reminder_dto.rs  reminders_dto.rs  response_dto.rs  stage_dto.rs  template_dto.rs
quic_backend/src/json/: helper.rs
quic_backend/src/test/: checklist_dto_test.rs  data_clone_test.rs  data_compressor_test.rs  data_file_test.rs  data_migration_test.rs  data_versioning_test.rs  helper.rs  kelly_dto_test.rs  mod.rs  pipeline_dto_test.rs  project_dto_test.rs  reminder_dto_test.rs  response_dto_test.rs  stage_dto_test.rs  template_dto_test.rs  unclassified_test.rs
(+146 files in other folders)
