[package]
name = "cert_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"]}

rcgen = "0.12"
ring = "0.17"
time = "0.3"
hex = "0.4"
serde_json = "1"

tokio = { version = "1.36", features = ["full"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rustls-pemfile = "1"