[package]
name = "quic_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
diesel = { version = "2", features = ["sqlite"] }
env_logger = "0.11"
hex = "0.4"
flate2 = "1"
jsonm = "0.2"
log = "0.4"
quinn = "0.10"
# quinn-proto = "0.10"
rcgen = "0.12"
ring = "0.17"
rustls = "0.21"  # upgrade in the future. 
rustls-pemfile = "1"
rustls-pki-types = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1", features = ["v7"] }  # "fast-rng" needs more dependencies. 
webtransport-quinn = "0.7"
